[package]
name = "moneta"
version = "0.0.1"
authors = ["Hristo Asenov <hristo.s.asenov@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.1"
msf-client = { path = "msf-client" }
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["diesel_sqlite_pool"]
